--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -20,7 +20,7 @@ body {
 }
 
 .App {
-	padding: 0;
+	padding: 0 5%;
 
 	@media (min-width: 768px) {
 		padding: 0px 15%;
@@ -41,8 +41,13 @@ body {
 p {
 	color: $body_text;
 	font-family: 'Kalam';
-	font-size: 1.8rem;
-	line-height: 2.4rem;
+	font-size: 1.4rem;
+	line-height: 2rem;
+
+	@media (min-width: 1024px) {
+		font-size: 1.8rem;
+		line-height: 2.4rem;
+	}
 
 	& > b {
 		font-weight: 700;
@@ -55,14 +60,20 @@ a {
 	outline: none;
 	color: $red;
 	transition: color 0.3s ease-in-out;
-	&:active, &:hover, &:focus {
+	&:active,
+	&:hover,
+	&:focus {
 		outline: none;
 		color: lighten($red, 10%);
-
 	}
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
 	font-family: 'Bangers';
 	color: $dark_colour;
 	letter-spacing: 1px;
@@ -92,22 +103,22 @@ h1, h2, h3, h4, h5, h6 {
 
 @media screen and (min-width: 800px) {
 	._25 {
-		flex: 2.5;
+		flex: 0.25;
 	}
 	._33 {
-		flex: 3.3;
+		flex: 0.33;
 	}
-    ._50 {
-        flex: 5.0;
-    }
+	._50 {
+		flex: 0.50;
+	}
 	._55 {
-		flex: 5.5;
+		flex: 0.55;
 	}
 	._66 {
-		flex: 6.6;
+		flex: 0.66;
 	}
 	._20 {
-		flex: 2;
+		flex: 0.2;
 	}
 }
 
@@ -118,7 +129,10 @@ section {
 label {
 	font-family: serif;
 	font-weight: 300;
-	font-size: 1.4rem;
+	margin-bottom: 10px;
+	@media (min-width: 1024px) {
+		font-size: 1.4rem;
+	}
 	margin-right: 20px;
 }
 
@@ -127,10 +141,16 @@ input[type="number"] {
 	border-radius: 3px;
 	background-color: white;
 	outline: none;
-	font-size: 1.8rem;
+	display: block;
+	@media (min-width: 1024px) {
+		font-size: 1.8rem;
+		display: inline;
+	}
+	font-size: 1.4rem;
 	box-shadow: none;
 	border: none;
 	padding: 10px 15px;
+	margin-bottom: 10px;
 }
 
 small {
@@ -141,8 +161,8 @@ small {
 	color: $gray;
 }
 
-
-.yLabel, .xLabel {
+.yLabel,
+.xLabel {
 	font-size: 1.3em;
 	font-family: serif;
 }
@@ -150,6 +170,25 @@ small {
 .probabilityChart {
 	display: block;
 	text-align: center;
+	& > svg {
+		@media (min-width: 1024px) {
+			width: 35%;
+		}
+	}
+}
+
+.visualEquation {
+	text-align: center;
+	& > svg {
+		@media (min-width: 1024px) {
+			width: 55%;
+		}
+	}
+}
+
+.equation-box {
+	width: 100%;
+	overflow-x: scroll;
 }
 
 span {
@@ -161,7 +200,7 @@ span {
 		border-radius: 50px;
 		color: white;
 	}
-	
+
 	&.eventNotA {
 		white-space: nowrap;
 		background-color: $red;
@@ -169,9 +208,8 @@ span {
 		margin: 0px 5px;
 		border-radius: 50px;
 		color: white;
-		
 	}
-	
+
 	&.eventB {
 		background-color: $purple;
 		white-space: nowrap;
@@ -179,7 +217,6 @@ span {
 		margin: 0px 5px;
 		border-radius: 50px;
 		color: white;
-
 	}
 }
 
@@ -191,14 +228,53 @@ span {
 			margin: 0;
 			text-align: center;
 		}
-		
-	} 
-	
+	}
+
 	&-denominator {
 		& > p {
 			text-align: center;
 			margin: 0;
 		}
+	}
+}
 
+.slider {
+	-webkit-appearance: none;
+	appearance: none;
+	width: 95%;
+	height: 10px;
+	background: #d3d3d3;
+	outline: none; 
+	opacity: 0.7;
+	transition: opacity .2s;
+	border-radius: 50px;
+	margin-bottom: 15px;
+	display: block;
+
+	&:hover {
+		opacity: 1;
+	}
+
+	&::-webkit-slider-thumb {
+		-webkit-appearance: none;
+		border: none;
+		appearance: none;
+		width: 25px;
+		height: 25px; 
+		background: #4caf50; 
+		cursor: pointer; 
+		border-radius: 50px;
+	}
+
+	&-orange {
+		&::-webkit-slider-thumb {
+			background-color: $accent;
+		}
+	}
+
+	&-red {
+		&::-webkit-slider-thumb {
+			background-color: $tertiary;
+		}
 	}
 }
